// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableRow /> renders Author, Categories, and Date columns when selected 1`] = `
Array [
  <TableCell
    as="td"
    className="items_table_item"
    data-header="PROJECT TITLE"
    key="d137_projectTitle"
  >
    <div
      className="primary_col"
    >
      <MyProjectPrimaryCol
        d={
          Object {
            "author": "Jane Doe",
            "categories": "about america",
            "createdAt": "May 9, 2019",
            "id": "d137",
            "projectTitle": "Test Title 1",
            "status": "PUBLISHED",
            "team": "IIP Video Production",
            "thumbnails": Object {
              "alt": "some alt text",
              "url": "https://thumbnailurl.com",
            },
            "updatedAt": "May 9, 2019",
            "visibility": "INTERNAL",
          }
        }
        header={
          Object {
            "label": "PROJECT TITLE",
            "name": "projectTitle",
          }
        }
        selectedItems={Array []}
        toggleItemSelection={[MockFunction]}
      />
    </div>
    <TableMobileDataToggleIcon
      isOpen={false}
      toggleDisplay={[Function]}
    />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="VISIBILITY"
    key="d137_visibility"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        VISIBILITY
      </div>
      INTERNAL
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="CREATED"
    key="d137_updatedAt"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        CREATED
      </div>
      May 9, 2019
    </span>
    <br />
    <span>
      PUBLISHED
    </span>
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="TEAM"
    key="d137_team"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        TEAM
      </div>
      IIP Video Production
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="AUTHOR"
    key="d137_author"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        AUTHOR
      </div>
      Jane Doe
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="CATEGORIES"
    key="d137_categories"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        CATEGORIES
      </div>
      about america
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="DATE"
    key="d137_createdAt"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        DATE
      </div>
      May 9, 2019
    </span>
    <br />
  </TableCell>,
]
`;

exports[`<TableRow /> renders Author, Categories, and Modified Date columns when selected 1`] = `
Array [
  <TableCell
    as="td"
    className="items_table_item"
    data-header="PROJECT TITLE"
    key="d137_projectTitle"
  >
    <div
      className="primary_col"
    >
      <MyProjectPrimaryCol
        d={
          Object {
            "author": "Jane Doe",
            "categories": "about america",
            "createdAt": "May 9, 2019",
            "id": "d137",
            "projectTitle": "Test Title 1",
            "status": "PUBLISHED",
            "team": "IIP Video Production",
            "thumbnails": Object {
              "alt": "some alt text",
              "url": "https://thumbnailurl.com",
            },
            "updatedAt": "May 9, 2019",
            "visibility": "INTERNAL",
          }
        }
        header={
          Object {
            "label": "PROJECT TITLE",
            "name": "projectTitle",
          }
        }
        selectedItems={Array []}
        toggleItemSelection={[MockFunction]}
      />
    </div>
    <TableMobileDataToggleIcon
      isOpen={false}
      toggleDisplay={[Function]}
    />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="VISIBILITY"
    key="d137_visibility"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        VISIBILITY
      </div>
      INTERNAL
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="CREATED"
    key="d137_updatedAt"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        CREATED
      </div>
      May 9, 2019
    </span>
    <br />
    <span>
      PUBLISHED
    </span>
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="TEAM"
    key="d137_team"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        TEAM
      </div>
      IIP Video Production
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="AUTHOR"
    key="d137_author"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        AUTHOR
      </div>
      Jane Doe
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="CATEGORIES"
    key="d137_categories"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        CATEGORIES
      </div>
      about america
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="MODIFIED DATE"
    key="d137_createdAt"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        MODIFIED DATE
      </div>
      May 9, 2019
    </span>
    <br />
  </TableCell>,
]
`;

exports[`<TableRow /> renders the persistent table headers 1`] = `
Array [
  <TableCell
    as="td"
    className="items_table_item"
    data-header="PROJECT TITLE"
    key="d137_projectTitle"
  >
    <div
      className="primary_col"
    >
      <MyProjectPrimaryCol
        d={
          Object {
            "author": "Jane Doe",
            "categories": "about america",
            "createdAt": "May 9, 2019",
            "id": "d137",
            "projectTitle": "Test Title 1",
            "status": "PUBLISHED",
            "team": "IIP Video Production",
            "thumbnails": Object {
              "alt": "some alt text",
              "url": "https://thumbnailurl.com",
            },
            "updatedAt": "May 9, 2019",
            "visibility": "INTERNAL",
          }
        }
        header={
          Object {
            "label": "PROJECT TITLE",
            "name": "projectTitle",
          }
        }
        selectedItems={Array []}
        toggleItemSelection={[MockFunction]}
      />
    </div>
    <TableMobileDataToggleIcon
      isOpen={false}
      toggleDisplay={[Function]}
    />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="VISIBILITY"
    key="d137_visibility"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        VISIBILITY
      </div>
      INTERNAL
    </span>
    <br />
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="CREATED"
    key="d137_updatedAt"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        CREATED
      </div>
      May 9, 2019
    </span>
    <br />
    <span>
      PUBLISHED
    </span>
  </TableCell>,
  <TableCell
    as="td"
    className="items_table_item"
    data-header="TEAM"
    key="d137_team"
  >
    <span>
      <div
        className="items_table_mobileHeader"
      >
        TEAM
      </div>
      IIP Video Production
    </span>
    <br />
  </TableCell>,
]
`;
